--- a/add/src/artificialBird_Controller.X/mcc-manifest-autosave.yml
+++ b/add/src/artificialBird_Controller.X/mcc-manifest-autosave.yml
@@ -2,7 +2,7 @@
 
 manifest_file_version: 1.0.0
 project: artificialBird
-creation_date: 2024-05-19T23:56:12.873+09:00[Asia/Tokyo]
+creation_date: 2024-05-29T22:38:01.048+09:00[Asia/Tokyo]
 operating_system: Windows 10
 mcc_mode: IDE
 mcc_mode_version: v6.20
@@ -24,3 +24,4 @@ modules:
 - {name: '@mchp-mcc/pin-content-processor', type: MELODY, version: 3.8.0}
 - {name: '@mchp-mcc/scf-pic8-interrupt-v2', type: MELODY, version: 5.2.11}
 - {name: '@mchp-mcc/scf-pic8-osc-v1', type: MELODY, version: 4.3.5}
+- {name: '@mchp-mcc/scf-pic8-tmr1-v1', type: MELODY, version: 4.3.9}
